fix: Status bar invisible — position absolute at viewport bottom
The #bar-container was position:relative after #canvas (height:100%),
pushing it below the viewport. Changed to position:absolute;bottom:0
centered with transform:translateX(-50%) and explicit widths matching
each breakpoint's sprite size (1440/960/480px). Added Status Bar
visibility check to smoke test (now 8/8 steps).

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -145,7 +145,7 @@ footer, header, hgroup, menu, nav, section {
 
     #mask {height:100%;width:100%;position:fixed;top:0;left:0;background:rgba(20,20,20,1);opacity:1;z-index:20;-moz-transition:0.5s opacity linear;-webkit-transition:0.5s opacity linear;-o-transition:0.5s opacity linear;-ms-transition:0.5s opacity linear;transition:0.5s opacity linear;pointer-events:none;}
 
-    #bar-container {background:url('../img/1/barsheet.png');image-rendering:-moz-crisp-edges;position:relative;width:100%;z-index:10;}
+    #bar-container {background:url('../img/1/barsheet.png') no-repeat;image-rendering:-moz-crisp-edges;position:absolute;bottom:0;left:50%;transform:translateX(-50%);z-index:10;}
     #healthbar {background:url('../img/1/barsheet.png');image-rendering:-moz-crisp-edges;position:absolute;}
 	#hitpoints {background:#d83939;-moz-transition:.5s width ease;-webkit-transition:.5s width ease;-o-transition:.5s width ease;-ms-transition:.5s width ease;transition:.5s width ease;}
     #hitpoints.white {-moz-animation:flash 0.5s linear 1;-webkit-animation:flash 0.5s linear 1;-o-animation:flash 0.5s linear 1;-ms-animation:flash 0.5s linear 1;animation:flash 0.5s linear 1;}
@@ -491,7 +491,7 @@ footer, header, hgroup, menu, nav, section {
 	    .bubble p {font-family:"GraphicPixel"; font-size:18px;line-height:24px;}
 	    
 	    /*GUI Bar*/
-	    #bar-container {height:51px;top:-3px;background-size:1440px;}
+	    #bar-container {height:51px;width:1440px;background-size:1440px;}
 
 		#healthbar {height:39px;background-position:0 -51px;width:306px;top:9px;background-size:1440px;z-index:20;}
 		#hitpoints {width:0px;height:33px;top:12px;left:33px;z-index:10;position:absolute;}
@@ -651,7 +651,7 @@ footer, header, hgroup, menu, nav, section {
 	    .bubble p {font-family:"GraphicPixel"; font-size:14px;}
 
 	    /*GUI Bar*/
-		#bar-container {height:34px;top:-2px;background-size:960px;}
+		#bar-container {height:34px;width:960px;background-size:960px;}
 
 		#healthbar {height:26px;background-position:0 -34px;width:204px;top:6px;background-size:960px;z-index:20;}
 		#hitpoints {width:0px;height:22px;top:8px;left:22px;z-index:10;position:absolute;}
@@ -812,7 +812,7 @@ footer, header, hgroup, menu, nav, section {
 	    .bubble p {font-family:"GraphicPixel"; font-size:14px;line-height:35px;}
 
 	    /*GUI Bar*/
-		#bar-container {height:34px;top:-2px;background-size:960px;}
+		#bar-container {height:34px;width:960px;background-size:960px;}
 
 		#healthbar {height:26px;background-position:0 -34px;width:204px;top:6px;background-size:960px;z-index:20;}
 		#hitpoints {width:0px;height:22px;top:8px;left:22px;z-index:10;position:absolute;}
@@ -971,7 +971,7 @@ footer, header, hgroup, menu, nav, section {
 	    .bubble p {font-family:"GraphicPixel"; font-size:10px;}
 	    
 	    /*GUI Bar*/
-	    #bar-container {height:17px;top:-1px;background-size:480px;}
+	    #bar-container {height:17px;width:480px;background-size:480px;}
 
 		#healthbar {height:13px;background-position:0 -17px;width:102px;top:3px;background-size:480px;z-index:20;}
 		#hitpoints {width:0px;height:11px;top:4px;left:11px;z-index:10;position:absolute;}
@@ -1129,7 +1129,7 @@ footer, header, hgroup, menu, nav, section {
 		#playerimage {display:none;}
 		
 		/*GUI Bar*/
-		#bar-container {height:34px;top:-2px;background-size:960px;background-position:0 -96px;}
+		#bar-container {height:34px;width:960px;background-size:960px;background-position:0 -96px;}
 
 		#healthbar {height:26px;background-position:0 -34px;width:204px;top:6px;background-size:960px;z-index:20;}
 		#hitpoints {width:0px;height:22px;top:8px;left:22px;z-index:10;position:absolute;}
